--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "npx serve dist -l $PORT"
+    "start": "npx serve -s dist -l $PORT"
   },
 
   "dependencies": {
